--- a/index.html
+++ b/index.html
@@ -52,22 +52,22 @@
             </tr>
             <tr>
                 <th rowspan="6">Skills</th>
-                <td>1</td>
+                <td>Flutter</td>
             </tr>
             <tr>
-                <td>2</td>
+                <td>Java</td>
             </tr>
             <tr>
-                <td>3</td>
+                <td>vue.js</td>
             </tr>
             <tr>
-                <td>4</td>
+                <td>HTML - CSS</td>
             </tr>
             <tr>
-                <td>5</td>
+                <td>MSSQL</td>
             </tr>
             <tr>
-                <td>6</td>
+                <td>C#</td>
             </tr>
             <tr>
                 <th>Profession</th>
